Fix games page on mobile

--- a/frontend/app/assets/css/base.css
+++ b/frontend/app/assets/css/base.css
@@ -546,6 +546,10 @@ h1, h2, h3, h4, h5, h6 {
     .mods-grid {
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)) !important;
     }
+
+	.games-grid {
+		grid-template-columns: repeat(auto-fill, minmax(170px, 1fr)) !important;
+	}
 }
 
 @media (min-width:768px) and (max-width:1280px) {
@@ -555,6 +559,10 @@ h1, h2, h3, h4, h5, h6 {
     .mods-grid {
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)) !important;
     }
+
+	.games-grid {
+		grid-template-columns: repeat(auto-fill, minmax(200px, 1fr))  !important;
+	}
 }
 
 @media (min-width:1280px) and (max-width:1536px) {
@@ -564,6 +572,9 @@ h1, h2, h3, h4, h5, h6 {
     .mods-grid {
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)) !important;
     }
+	.games-grid {
+		grid-template-columns: repeat(auto-fill, minmax(220px, 1fr))  !important;
+	}
 }
 
 @media (min-width:1536px) and (max-width:1920px) {
